# SimulatorGame

./: .gitignore  Battery.h  Building.h  BuildingX.h  CMakeLists.txt  CoalMine.h  Forest.h  Foundry.h  Interface.cpp  Interface.h  IronMine.h  Island.cpp  Island.h  Lumberjack.h  Makefile  Miner.h  Mountain.h  Operator.h  PowerPlant.h  README.md  Resources.h  Swamp.h  TODO  Worker.h  Zone.cpp  Zone.h  \  comando.cpp  comando.h  command.cpp  command.h  config.cpp  config.h  dia.h  edificio.cpp  edificio.h  file.cpp  file.h  game.cpp  ilha.cpp  (+17 more)
Building/: Battery.cpp  Battery.h  Building.cpp  Building.h  BuildingX.cpp  BuildingX.h  CoalMine.cpp  CoalMine.h  Foundry.cpp  Foundry.h  IronMine.cpp  IronMine.h  PowerPlant.cpp  PowerPlant.h  Sawmill.cpp  Sawmill.h
Game/: Game.cpp  Game.h  commands.cpp
Interface/: Interface.cpp  Interface.h
Island/: Island.cpp  Island.h
Resources/: Resources.h
Worker/: Lumberjack.h  Miner.h  Operator.h  Worker.cpp  Worker.h
Zone/: Desert.cpp  Desert.h  Forest.cpp  Forest.h  Mountain.cpp  Mountain.h  Pasture.cpp  Pasture.h  Swamp.cpp  Swamp.h  Zone.cpp  Zone.h  ZoneX.cpp  ZoneX.h
command/: command.cpp  command.h
error/: error.cpp  error.h
errors/: errors.cpp  errors.h
utils/: utils.cpp  utils.h
